# myBrowser

./: CMakeLists.txt  CMakePresets.json  MyBrowser.cpp  MyBrowser.h  Readme.md  URLParser.cpp  URLParser.h  crowler.cpp  crowler.h  dataBase.cpp  dataBase.h  iniParser.cpp  iniParser.h  logger.cpp  logger.h  server.cpp  server.h  test.ini  threadPool.cpp  threadPool.h
html/: index.html  style.css
include/: MyBrowser.h  URLParser.h  boostBeastIncludes.h  crowler.h  dataBase.h  iniParser.h  server.h  threadPool.h
src/: MyBrowser.cpp  URLParser.cpp  crowler.cpp  dataBase.cpp  main.cpp  server.cpp  threadPool.cpp
